--- a/src/app/Pages/home/home.page.html
+++ b/src/app/Pages/home/home.page.html
@@ -3,23 +3,14 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>{{ home }}</ion-title>
+    <ion-title> YipYip! </ion-title>
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content [fullscreen]="true">
-  
-      <div class="centered-container">
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title>Bienvenido/a</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <!-- Interpolación del nombre de usuario -->
-            <strong>{{ username }}</strong>
-          </ion-card-content>
-        </ion-card>
-      </div>
+  <div class="centered-container">
+  </div>
 </ion-content>
     
 
