--- a/src/app/Pages/historial/historial.page.html
+++ b/src/app/Pages/historial/historial.page.html
@@ -1,5 +1,10 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="end">
+      <ion-button (click)="goToHome()">
+        <ion-icon name="home"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>Historial</ion-title>
   </ion-toolbar>
 </ion-header>
