--- a/src/app/Pages/home/home.page.scss
+++ b/src/app/Pages/home/home.page.scss
@@ -1,5 +1,5 @@
 ion-menu-button {
-  color: var(--ion-color-primary);
+  color: var(--ion-color-secundary);
 }
 
 #container {
@@ -19,7 +19,7 @@ ion-menu-button {
 #container p {
   font-size: 16px;
   line-height: 22px;
-  color: #8c8c8c;
+  color: var(--ion-color-secundary);
   margin: 0;
 }
 
@@ -33,3 +33,38 @@ ion-menu-button {
   justify-content: center;
   height: 10vh;
 }
+
+.ion-title {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+}
+
+ion-tab-button {
+  // Estilos por defecto
+  --background-hover: var(--ion-color-tertiary); /* Color de fondo al pasar el cursor */
+  --color-hover: #ffffff; /* Color de texto al pasar el cursor */
+  --transition-duration: 0.3s; /* Duración de la transición al pasar el cursor */
+
+  background-color: transparent; /* Fondo transparente por defecto */
+  transition: background-color var(--transition-duration), color var(--transition-duration);
+
+  &:hover {
+    background-color: var(--ion-color-secondary);
+    color: var(--ion-color-secondary);
+  }
+}
+
+.centered-container {
+  background-image: url('../../../assets/img/logo.png');
+  background-size: 200px 200px; 
+  background-position: center; 
+  background-repeat: no-repeat; 
+  height: 100%; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  opacity: 0.5; 
+}
+
