--- a/src/app/Pages/login/login.page.html
+++ b/src/app/Pages/login/login.page.html
@@ -1,25 +1,44 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <div>
+<ion-content [fullscreen]="true" color="medium">
 
-  </div>
-  
-  <form (ngSubmit)="login()" #loginForm="ngForm">
-    <ion-item>
-      <ion-label position="floating">Usuario</ion-label>
-      <ion-input type="text" name="username" [(ngModel)]="username" required minlength="3" maxlength="8"></ion-input>
-    </ion-item>
+<div class="ion-text-center cuerpo_page">
 
-    <ion-item>
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input type="password" name="password" [(ngModel)]="password" pattern="[0-9]{4}" required></ion-input>
-    </ion-item>
+  <ion-card>
+    <ion-card-title>
+    <h3>Bienvenidos</h3>
+    </ion-card-title>
 
-    <ion-button (click)="login()" expand="full">Iniciar sesión</ion-button>
-  </form>
+    <ion-grid>
+      <ion-row>
+        <ion-col size="12" class="ion-text-center">
+          <img class="logo animacion_zoom" src="assets/img/logo.png" alt="logo" />
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-card-content class="ion-padding">
+      <form (ngSubmit)="login()" #loginForm="ngForm">
+        <ion-item>
+          <ion-label position="floating">Usuario</ion-label>
+          <ion-input type="text" name="username" [(ngModel)]="username" required minlength="3" maxlength="8"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label position="floating">Contraseña</ion-label>
+          <ion-input type="password" name="password" [(ngModel)]="password" pattern="[0-9]{4}" required></ion-input>
+        </ion-item>
+        <ion-buttons>
+          <ion-button (click)="login()" expand="block">Iniciar sesión</ion-button>
+          <ion-button (click)="signup()" expand="block">Registrarse</ion-button>
+        </ion-buttons>
+      </form>
+    </ion-card-content>
+
+  </ion-card>
+</div>
 </ion-content>
