--- a/src/app/Pages/sign-up/sign-up.page.html
+++ b/src/app/Pages/sign-up/sign-up.page.html
@@ -1,8 +1,14 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="end">
+      <ion-button (click)="goToHome()">
+        <ion-icon name="home"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>Registro</ion-title>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content [fullscreen]="true" color="medium">
   <ion-card class="profile-content">
@@ -12,38 +18,38 @@
       </ion-avatar>
     </div>
 
-    <form (ngSubmit)="register()" class="form">
+    <form (ngSubmit)="guardarDatos()" class="form">
       <ion-item>
         <ion-label position="floating">Usuario</ion-label>
-        <ion-input [(ngModel)]="user.username" name="username" required></ion-input>
+        <ion-input [(ngModel)]="username" name="username" required></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Contraseña</ion-label>
-        <ion-input type="password" [(ngModel)]="user.password" name="password" required></ion-input>
+        <ion-input type="password" [(ngModel)]="password" name="password" required></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Correo Electrónico</ion-label>
-        <ion-input type="email" [(ngModel)]="user.correo" name="correo" required></ion-input>
+        <ion-input type="email" [(ngModel)]="correo" name="correo" required></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">ORCID ID</ion-label>
-        <ion-input [(ngModel)]="user.orcid" name="orcid" required></ion-input>
+        <ion-input [(ngModel)]="orcid" name="orcid" required></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Nombre</ion-label>
-        <ion-input [(ngModel)]="user.nombre" name="nombre" required></ion-input>
+        <ion-input [(ngModel)]="nombre" name="nombre" required></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Apellido</ion-label>
-        <ion-input [(ngModel)]="user.apellido" name="apellido" required></ion-input>
+        <ion-input [(ngModel)]="apellido" name="apellido" required></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="floating">Fecha de Nacimiento</ion-label>
-        <ion-input type="date" [(ngModel)]="user.fechaNacimiento" name="fechaNacimiento" required></ion-input>
+        <ion-input type="date" [(ngModel)]="fechaNacimiento" name="fechaNacimiento" required></ion-input>
       </ion-item>
       <ion-item>
         <ion-label>Nivel de Educación</ion-label>
-        <ion-select [(ngModel)]="user.nivelEducacion" name="nivelEducacion" required>
+        <ion-select [(ngModel)]="nivelEducacion" name="nivelEducacion" required>
           <ion-select-option value="Basica">Educación Básica</ion-select-option>
           <ion-select-option value="Media">Educación Media</ion-select-option>
           <ion-select-option value="Superior">Educación Superior</ion-select-option>
@@ -53,7 +59,7 @@
       </ion-item>
       <ion-item>
         <ion-label>Área de interés</ion-label>
-        <ion-select [(ngModel)]="user.areaInteres" name="areaInteres" required>
+        <ion-select [(ngModel)]="areaInteres" name="areaInteres" required>
           <ion-select-option value="Ingenieria">Ingeniería</ion-select-option>
           <ion-select-option value="Matematicas">Matemáticas</ion-select-option>
           <ion-select-option value="Arte y Cultura">Arte y Cultura</ion-select-option>
@@ -67,7 +73,7 @@
         </ion-select>
       </ion-item>
 
-      <ion-button expand="full" type="submit" class="submit-button">Registrarse</ion-button>
+      <ion-button (click)="guardar()" expand="full" type="submit" class="submit-button">Registrarse</ion-button>
     </form>
   </ion-card>
 </ion-content>
