--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,48 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+
+ion-alert {
+
+    // Header Text
+    .alert-title.sc-ion-alert-md {
+
+      font-weight: 600;
+      color: var(--ion-text-color, #00000080);
+    }
+  
+    // checkbox border color
+    [aria-checked="true"].sc-ion-alert-md .alert-radio-icon.sc-ion-alert-md {
+      border-color: #00000080;
+    }
+  
+    // checkbox or radio button color
+    .alert-radio-inner.sc-ion-alert-md {
+      background-color: #00000080 !important;
+    }
+  
+    // wrap the text
+    .alert-radio-label.sc-ion-alert-md {
+      white-space: pre-line !important;
+      font-family: "AustralisProSwash-Italic";
+      color: var(--ion-text-color, #000000b3);
+      font-weight: bold;
+    }
+  
+    // Height of text
+    .alert-tappable.sc-ion-alert-md {
+      height: 77px !important;
+    }
+  
+    // Checked text color
+    [aria-checked="true"].sc-ion-alert-md .alert-radio-label.sc-ion-alert-md {
+      color: var(--ion-color-step-850, #262626);
+    }
+  
+    // Button color
+    .alert-button-inner.sc-ion-alert-md {
+      color: whitesmoke;
+
+    }
+  }
