--- a/src/app/Pages/buscador/buscador.page.html
+++ b/src/app/Pages/buscador/buscador.page.html
@@ -29,29 +29,27 @@
           <p><strong>URL:</strong> <a [href]="searchResult.metadata.URL" target="_blank" class="URL">{{ searchResult.metadata.URL }}</a></p>
           <p><strong>Autores:</strong></p>
           <ul>
-            <li *ngFor="let author of searchResult.metadata.author">{{ author.given }} {{ author.family }}</li>
-          </ul>
+            <li>{{ getAuthors(searchResult.metadata) }}</li>
+          </ul>          
           <p><strong>ID:</strong> {{ searchResult.metadata.id }}</p>
           <p><strong>Año de publicación:</strong> {{ searchResult.metadata.year }}</p>
         </ion-card-content>
       </ion-card>
 
-      <div *ngIf="searchResult.citations">
-        <ion-card>
-          <ion-card-header>
-            <ion-card-title>Citaciones</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <ul>
-              <li *ngFor="let citation of searchResult.citations">
-                <p>{{ citation.citation }}</p>
-                <p><strong>Estilo:</strong> {{ citation.style_fullname }}</p>
-                <p><strong>Formato:</strong> {{ citation.style_shortname }}</p>
-              </li>
-            </ul>
-          </ion-card-content>
-        </ion-card>
-      </div>
+      <ion-card *ngIf="searchResult.citations">
+        <ion-card-header>
+          <ion-card-title>Citaciones</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <ul>
+            <li *ngFor="let citation of searchResult.citations" class="citation-item">
+              <p [innerHTML]="citation.citation"></p>
+              <p><strong>Estilo:</strong> {{ citation.style_fullname }}</p>
+              <p><strong>Formato:</strong> {{ citation.style_shortname }}</p>
+            </li>
+          </ul>
+        </ion-card-content>
+      </ion-card>
     </div>
 
     <div class="ion-text-center no-results" *ngIf="!searchResult && searchTerm !== ''">
