--- a/src/app/Pages/sign-up/sign-up.page.html
+++ b/src/app/Pages/sign-up/sign-up.page.html
@@ -73,7 +73,7 @@
         </ion-select>
       </ion-item>
 
-      <ion-button (click)="guardar()" expand="full" type="submit" class="submit-button">Registrarse</ion-button>
+      <ion-button (click)="guardarDatos()" expand="full" type="submit" class="submit-button">Registrarse</ion-button>
     </form>
   </ion-card>
 </ion-content>
