--- a/src/app/Pages/edit/edit.page.html
+++ b/src/app/Pages/edit/edit.page.html
@@ -1,13 +1,70 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>edit</ion-title>
+<ion-header>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="end">
+      <ion-button (click)="goToPerfil()">
+        <ion-icon name="arrow-back"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>Editar Perfil</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">edit</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true" color="medium">
+  <ion-card class="profile-content">
+    <div align="center" class="image" (click)="presentAlertConfirm()">
+      <ion-avatar>
+        <img [src]="photo ? photo : 'https://ionicframework.com/docs/img/demos/avatar.svg'" />
+      </ion-avatar>
+    </div>
+
+    <form #form="ngForm" (ngSubmit)="onSubmit(form)">
+      <ion-card class="options">
+        <ion-card-content>
+          <ion-item lines="none" class="profile">
+            <ion-label class="ion-text-center">
+              <ion-text color="secondary">{{ user.username }}</ion-text>
+
+            </ion-label>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="floating">Nombre</ion-label>
+            <ion-input [(ngModel)]="user.nombre" name="nombre" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="floating">Apellido</ion-label>
+            <ion-input [(ngModel)]="user.apellido" name="apellido" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="floating">Nivel de Educación</ion-label>
+            <ion-input [(ngModel)]="user.nivelEducacion" name="nivelEducacion" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="floating">Fecha de Nacimiento</ion-label>
+            <ion-input [(ngModel)]="user.fechaNacimiento" name="fechaNacimiento" type="date" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="floating">Correo Electrónico</ion-label>
+            <ion-input [(ngModel)]="user.correo" name="correo" type="email" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="floating">ORCID ID</ion-label>
+            <ion-input [(ngModel)]="user.orcid" name="orcid" required></ion-input>
+          </ion-item>
+
+          <ion-item>
+            <ion-label position="floating">Área de Interés</ion-label>
+            <ion-input [(ngModel)]="user.areaInteres" name="areaInteres" required></ion-input>
+          </ion-item>
+        </ion-card-content>
+      </ion-card>
+
+      <ion-button type="submit" expand="full" class="custom-button">Guardar Cambios</ion-button>
+    </form>
+  </ion-card>
 </ion-content>
